Window focus on external monitor changes when switching workspaces
Affected version
GNOME 43.1 on Fedora 37, Wayland. Also present on Ubuntu 22.04 LTS
uname -a:
Linux valinor 6.0.8-300.fc37.x86_64 #1 SMP PREEMPT_DYNAMIC Fri Nov 11 15:09:04 UTC 2022 x86_64 x86_64 x86_64 GNU/Linux
Bug summary
When switching workspaces, window focus changes on external monitor.
Steps to reproduce
- Open a clean GNOME instance, with no windows open.
- Attach a second monitor. Place GNOME in "Workspaces on primary display only" mode
- Open a window on the primary monitor
- Open two windows on the external monitor
- Drag the two windows on the external monitor such that they overlap, for visibility
- Switch workspaces to the right.
- Click on the window on the external monitor that is on the bottom (the one that is not focused) to bring it to the top
- Switch workspaces back and forth. The windows will switch focus depending on the workspace it is on.
What happened
Window focus changed.
What did you expect to happen
Intuitively, one would expect that since the external monitor does not have workspaces, the window order will not change, even if the workspace is switched on the primary.
Relevant logs, screenshots, screencasts etc.2022-12-06_21-48-35.mkv
See attached video for a demonstration. Note: Choppy animations are a different issue. Those are likely caused by having to copy frames from an eGPU back to the integrated graphics in order to display them on the internal laptop display. Disabling said internal display fixes the issue, but removes a usable monitor.