window: Update mru list for every workspace the window is on

If the window is on all workspaces we should update the mru list for all
those workspaces, otherwise the default focus window for a specific
workspace can be unexpected.

Fixes: https://gitlab.gnome.org/GNOME/mutter/-/issues/2548
Part-of: <https://gitlab.gnome.org/GNOME/mutter/-/merge_requests/2747>

(cherry picked from commit 0d69fabbe6895fdac31e044060ed16bd1f1c344a)